<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_margin="16dp"
        android:paddingTop="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text1"
        android:paddingTop="10dp"
        android:layout_margin="16dp"
        android:textSize="26sp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text2"
        android:layout_margin="16dp"
        android:textSize="26sp"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="16dp"/>

        <Button
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="16dp"/>

        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="16dp" />

        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ac"
            android:textSize="25sp"
            android:layout_margin="10dp"
            android:padding="16dp"
            android:backgroundTint="@color/black"/>
    </LinearLayout>


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="38sp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="number"
        android:paddingTop="20dp"/>

</LinearLayout>
